<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="status">Status</string>
    <string name="due_date">Due Date</string>
    <string-array name="statusArray">
        <item>PLAN TO TAKE</item>
        <item>IN PROGRESS</item>
        <item>COMPLETED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="typeArray">
        <item>OBJECTIVE</item>
        <item>PERFORMANCE</item>
    </string-array>
    <string name="title_activity_temp">Temp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="channel_name">Student Scheduler Channel</string>
    <string name="channel_description">Channel for Student Scheduler</string>
</resources>
